<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_app_icon" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center|top"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="30dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="2dp">

                <EditText
                    android:id="@+id/email_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_mail_outline_black_24dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="2dp">

                <EditText
                    android:id="@+id/password_ed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forget_pass_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily=""
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/forget_password"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/login_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg"
                android:padding="4dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="serif"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="bottom|center"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/create_new_account"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>